Unit test data sharing and abstraction methods

--- a/C# Testing/Calculations/CalculationsTests/AppTests.csproj
+++ b/C# Testing/Calculations/CalculationsTests/AppTests.csproj
@@ -20,4 +20,10 @@
     <ProjectReference Include="..\Calculations\UnitTestClasses.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="IsOddOrEvenTestData.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
